Add Nop.Plugin.Widgets.Generic 4.30 of nopcommerce

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@
 /node_modules/shelljs/src/which.js
 /node_modules/.bin/window-size
 /node_modules/yargs/locales/zh.json
+/src/nopCommerce/*
+/obj/
