Manejo de versiones de nopCommerce and fix plugin prefix name.

--- a/src/nopCommerce-430/Nop.Plugin.Widgets.NopcliGeneric/Nop.Plugin.Widgets.NopcliGeneric.csproj
+++ b/src/nopCommerce-430/Nop.Plugin.Widgets.NopcliGeneric/Nop.Plugin.Widgets.NopcliGeneric.csproj
@@ -8,7 +8,7 @@
         <PackageProjectUrl>https://www.nopcommerce.com</PackageProjectUrl>
         <RepositoryUrl>https://github.com/nopSolutions/nopCommerce</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
-        <OutputPath>..\..\Presentation\Nop.Web\Plugins\Widgets.Generic</OutputPath>
+        <OutputPath>..\..\Presentation\Nop.Web\Plugins\Widgets.NopcliGeneric</OutputPath>
         <OutDir>$(OutputPath)</OutDir>
         <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
     </PropertyGroup>
