--- a/package.json
+++ b/package.json
@@ -1,13 +1,32 @@
 {
   "name": "nopcli",
-  "version": "2.0.2",
+  "version": "2.0.3",
+  "description": "Portable Unix shell commands for Node.js",
+  "keywords": [
+    "nopCommerce",
+    "Ecommerce",
+    "plugin",
+    "shell",
+    "cli",
+    "dotnet"
+  ],
+  "contributors": [
+    "Diogenes Polanco <diogenespolancomartinez@gmail.com> (https://github.com/diogenespolanco)",
+    "Joel Mercedes <joelmercedes29@gmail.com> (https://github.com/archinuxrd)"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/DiogenesPolanco/nopCommerce-cli.git"
+  },
   "dependencies": {
     "shelljs": "^0.4.0",
     "yargs": "^3.9.0"
   },
+  "scripts": {
+    "plugin-widget": "node bin/nopcli.js new --group=Widgets --plugin=Test"
+  },
   "bin": {
     "nopcli": "bin/nopcli.js"
   },
-
-   "license": "MIT",
+  "license": "osl-3.0"
 }
