--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "yargs": "^3.9.0"
   },
   "scripts": {
-    "plugin-widget": "node bin/nopcli.js new --group=Widgets --plugin=Test"
+    "widget": "node bin/nopcli.js new --group=Widgets --plugin=Test",
+    "build-widget": "node bin/nopcli.js build --group=Widgets --plugin=Test"
   },
   "bin": {
     "nopcli": "bin/nopcli.js"
