working with arguments

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nopcli",
-  "version": "2.0.7",
+  "version": "2.0.8",
   "description": "nopCommerce CLI is a development tool for build plugins for nopCommerce Solutions.",
   "keywords": [
     "nopCommerce",
@@ -24,8 +24,8 @@
     "yargs": "^3.9.0"
   },
   "scripts": {
-    "widget": "node bin/nopcli.js new --group=Widgets --plugin=Test",
-    "build-widget": "node bin/nopcli.js build --group=Widgets --plugin=Test",
+    "widget": "node bin/nopcli.js new -g=Widgets -p=Test",
+    "build-widget": "node bin/nopcli.js build -g=Widgets -p=Test",
     "help": "node bin/nopcli.js --h"
   },
   "bin": {
