--- a/src/nopCommerce-440/Nop.Plugin.Widgets.NopCliGeneric/Nop.Plugin.Widgets.NopCliGeneric.csproj
+++ b/src/nopCommerce-440/Nop.Plugin.Widgets.NopCliGeneric/Nop.Plugin.Widgets.NopCliGeneric.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <Copyright>Copyright © Nop Solutions, Ltd</Copyright>
         <Company>Nop Solutions, Ltd</Company>
         <Authors>Nop Solutions, Ltd</Authors>
@@ -8,38 +8,41 @@
         <PackageProjectUrl>https://www.nopcommerce.com</PackageProjectUrl>
         <RepositoryUrl>https://github.com/nopSolutions/nopCommerce</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
-        <OutputPath>..\..\Presentation\Nop.Web\Plugins\Widgets.NopcliGeneric</OutputPath>
+        <OutputPath>..\..\Presentation\Nop.Web\Plugins\Widgets.NopCliGeneric</OutputPath>
         <OutDir>$(OutputPath)</OutDir>
+        <!--Set this parameter to true to get the dlls copied from the NuGet cache to the output of your    project. You need to set this parameter to true if your plugin has a nuget package to ensure that   the dlls copied from the NuGet cache to the output of your project-->
         <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
     </PropertyGroup>
 
     <ItemGroup>
+        <None Remove="logo.png" />
         <None Remove="plugin.json" />
+        <None Remove="Views\Configure.cshtml" />
+        <None Remove="Views\_ViewImports.cshtml" />
+        <None Remove="Views\PublicInfo.cshtml" />
     </ItemGroup>
 
     <ItemGroup>
+        <Content Include="logo.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
         <Content Include="plugin.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
         <Content Include="Views\Configure.cshtml">
-          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-        <Content Include="Views\PublicInfo.cshtml">
-          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
         <Content Include="Views\_ViewImports.cshtml">
-          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="Views\PublicInfo.cshtml">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\Presentation\Nop.Web.Framework\Nop.Web.Framework.csproj" />
         <ClearPluginAssemblies Include="$(MSBuildProjectDirectory)\..\..\Build\ClearPluginAssemblies.proj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Content" />
-      <Folder Include="Scripts" />
     </ItemGroup>
     <!-- This target execute after "Build" target -->
     <Target Name="NopTarget" AfterTargets="Build">
