--- a/src/nopCommerce-430/Nop.Plugin.Widgets.NopCliGeneric/Nop.Plugin.Widgets.NopCliGeneric.csproj
+++ b/src/nopCommerce-430/Nop.Plugin.Widgets.NopCliGeneric/Nop.Plugin.Widgets.NopCliGeneric.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <Copyright>Copyright © Nop Solutions, Ltd</Copyright>
-        <Company>Nop Solutions, Ltd</Company>
-        <Authors>Nop Solutions, Ltd</Authors>
+        <Copyright>Copyright © NopCli</Copyright>
+        <Company>NopCli</Company>
+        <Authors>DiogenesPolanco, ArchinuxRD</Authors>
         <PackageLicenseUrl></PackageLicenseUrl>
-        <PackageProjectUrl>https://www.nopcommerce.com</PackageProjectUrl>
-        <RepositoryUrl>https://github.com/nopSolutions/nopCommerce</RepositoryUrl>
+        <PackageProjectUrl>https://diogenespolanco.github.io/nopCommerce-cli</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/DiogenesPolanco/nopCommerce-cli</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
         <OutputPath>..\..\Presentation\Nop.Web\Plugins\Widgets.NopCliGeneric</OutputPath>
         <OutDir>$(OutputPath)</OutDir>
