--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
   # make sure when the docs are generated nothing changes (a.k.a. the docs have already been generated)
   #- npm run gendocs
   #- npm run check-node-support
-  - npm run after-travis "Make sure to generate docs!"
+  #- npm run after-travis "Make sure to generate docs!"
 after_success:
   #- npm run codecov -- -f coverage/lcov.info
 
