--- a/src/nopCommerce-430/Nop.Plugin.Misc.NopCliGeneric/Nop.Plugin.Misc.NopCliGeneric.csproj
+++ b/src/nopCommerce-430/Nop.Plugin.Misc.NopCliGeneric/Nop.Plugin.Misc.NopCliGeneric.csproj
@@ -18,18 +18,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Content\styles.css" /> 
+    <None Remove="logo.png" />
     <None Remove="plugin.json" />
+    <None Remove="Content\styles.css" /> 
     <None Remove="Views\Configure.cshtml" />
     <None Remove="Views\PublicInfo.cshtml" />
     <None Remove="Views\_ViewImports.cshtml" />
   </ItemGroup>
 
-  <ItemGroup> 
-    <Content Include="Content\styles.css">
+  <ItemGroup>
+    <Content Include="logo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="plugin.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\styles.css">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Views\Configure.cshtml">
