--- a/src/nopCommerce-430/Nop.Plugin.Payments.NopCliGeneric/Nop.Plugin.Payments.NopCliGeneric.csproj
+++ b/src/nopCommerce-430/Nop.Plugin.Payments.NopCliGeneric/Nop.Plugin.Payments.NopCliGeneric.csproj
@@ -17,14 +17,18 @@
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
-  <ItemGroup> 
+  <ItemGroup>
+    <None Remove="logo.png" />
     <None Remove="plugin.json" />
     <None Remove="Views\Configure.cshtml" />
     <None Remove="Views\PaymentInfo.cshtml" />
     <None Remove="Views\_ViewImports.cshtml" />  
   </ItemGroup>
 
-  <ItemGroup> 
+  <ItemGroup>
+    <Content Include="logo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="plugin.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
