--- a/src/nopCommerce-440/Nop.Plugin.DiscountRules.NopCliGeneric/Nop.Plugin.DiscountRules.NopCliGeneric.csproj
+++ b/src/nopCommerce-440/Nop.Plugin.DiscountRules.NopCliGeneric/Nop.Plugin.DiscountRules.NopCliGeneric.csproj
@@ -1,17 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <Copyright>Copyright © NopCli</Copyright>
+ <Copyright>Copyright © NopCli</Copyright>
         <Company>NopCli</Company>
         <Authors>DiogenesPolanco, ArchinuxRD</Authors>
         <PackageLicenseUrl></PackageLicenseUrl>
         <PackageProjectUrl>https://diogenespolanco.github.io/nopCommerce-cli</PackageProjectUrl>
         <RepositoryUrl>https://github.com/DiogenesPolanco/nopCommerce-cli</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
-    <OutputPath>..\..\Presentation\Nop.Web\Plugins\Misc.NopCliGeneric</OutputPath>
+    <OutputPath>..\..\Presentation\Nop.Web\Plugins\DiscountRules.NopCliGeneric</OutputPath>
     <OutDir>$(OutputPath)</OutDir>
-    <!--Set this parameter to true to get the dlls copied from the NuGet cache to the output of your project. 
+    <!--Set this parameter to true to get the dlls copied from the NuGet cache to the output of your project.
     You need to set this parameter to true if your plugin has a nuget package 
     to ensure that the dlls copied from the NuGet cache to the output of your project-->
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
@@ -20,17 +20,12 @@
   <ItemGroup>
     <None Remove="logo.png" />
     <None Remove="plugin.json" />
-    <None Remove="Content\styles.css" /> 
     <None Remove="Views\Configure.cshtml" />
-    <None Remove="Views\PublicInfo.cshtml" />
     <None Remove="Views\_ViewImports.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="logo.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\styles.css">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="plugin.json">
@@ -39,20 +34,14 @@
     <Content Include="Views\Configure.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Views\PublicInfo.cshtml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Views\_ViewImports.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Presentation\Nop.Web.Framework\Nop.Web.Framework.csproj" />
     <ClearPluginAssemblies Include="$(MSBuildProjectDirectory)\..\..\Build\ClearPluginAssemblies.proj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Presentation\Nop.Web\Nop.Web.csproj" />
   </ItemGroup>
 
   <!-- This target execute after "Build" target -->
