--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ os:
   - linux
   - osx
 script:
-  #- npm run test-with-coverage
+  - npm run test
   #- npm run lint
   # make sure when the docs are generated nothing changes (a.k.a. the docs have already been generated)
   #- npm run gendocs
