--- a/package.json
+++ b/package.json
@@ -54,11 +54,14 @@
   "license": "osl-3.0",
   "type": "module",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
     "@babel/preset-env": "^7.15.6",
     "jest": "^27.2.4",
     "rollup": "^2.57.0",
     "rollup-plugin-minify-cli": "^1.0.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "yargs-parser": "^20.2.9"
   },
   "jest": {
     "testPathIgnorePatterns": [
