--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "bin": {
     "nopcli": "dist/nopcli.min.js"
   },
-  "license": "osl-3.0",
+  "license": "OSL-3.0",
   "type": "module",
   "devDependencies": {
     "@babel/preset-env": "^7.15.6",
