--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.15.6",
     "babel-jest": "^27.2.4",
+    "inquirer": "^8.1.5",
     "jest": "^27.2.4",
     "rollup": "^2.57.0",
     "rollup-plugin-minify-cli": "^1.0.1",
