--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "shell",
     "cli",
     "dotnet",
-    "nop"
+    "nop", 
+  "cmd"
   ],
   "contributors": [
     "Diogenes Polanco <diogenespolancomartinez@gmail.com> (https://github.com/diogenespolanco)",
